<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rr"
    android:clickable="true"
    android:background="@color/abu2"
    android:orientation="horizontal"
    >
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        card_view:cardBackgroundColor="@color/putih"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="1.5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/notellbb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/namalbb"
            android:layout_below="@+id/alamatlbb"
            android:layout_marginLeft="0dp"
            android:text="@string/notel"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/alamat"
            android:id="@+id/alamatlbb"
            android:textColor="#666"
            android:layout_marginLeft="0dp"

            android:layout_below="@+id/namalbb"
            android:layout_alignStart="@+id/namalbb" />

        <TextView
            android:id="@+id/namalbb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="12dp"
            android:text="@string/nama"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#666"
            android:textStyle="bold|italic" />


    </RelativeLayout>
</android.support.v7.widget.CardView>
</RelativeLayout>