<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    tools:context="com.subayu.comarudin.lbb_gis.MenuUtama">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/menuklik1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/kotak"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/menu1"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:padding="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/mapsandlags4"/>


                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menuklik2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/kotak"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/menu2"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:padding="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/cardinalpoints"/>


                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/menuklik3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/kotak"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/menu3"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:padding="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/search"/>


                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menuklik4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/kotak"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/menu4"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:padding="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/user"/>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</ScrollView>
